<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="889dp"
        android:padding="10dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/questionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionsNO"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/gamePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:layout_below="@id/questionNo"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/gameTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerValue"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <RadioGroup
            android:id="@+id/answerBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <RadioButton
                android:id="@+id/answerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionA"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/answerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionB"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/answerC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionC"
                android:textSize="20sp"/>



        </RadioGroup>






















    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>